--- a/game-real.html
+++ b/game-real.html
@@ -43,8 +43,8 @@
         </header>
         <!-- 登录前 -->
         <div class="nav-before-login">
-            <a href="reg.html">免费注册</a>
-            <a href="login.html">玩家登录</a>
+            <a href="reg.html" data-i18n-text="regFree"></a>
+            <a href="login.html" data-i18n-text="login"></a>
         </div>
         <!--/. 登录前 -->
         <nav class="bar bar-tab">
@@ -130,12 +130,9 @@
                     </div>
                 </div>
             </div>
-
-
-
-
         </div><!-- /. content -->
     </div>
+
     <!-- popup, panel 等放在这里 -->
     <div class="panel-overlay"></div>
     <!-- 左侧栏 -->
