--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- 自定义应用名称 -->
-    <meta name="application-name" content="赢8娱乐">
+    <meta name="application-name" content="Sea Slot">
     <!-- 这里会有一个app图标尺寸问题一般使用120*120 -->
     <link rel="apple-touch-icon" sizes="120x120" href="images/startup-image/icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/startup-image/icon.png">
