--- a/search-result.html
+++ b/search-result.html
@@ -30,8 +30,8 @@
         </header>
         <!-- 登录前 -->
         <div class="nav-before-login">
-            <a href="reg.html">免费注册</a>
-            <a href="login.html">玩家登录</a>
+            <a href="reg.html" data-i18n-text="regFree"></a>
+            <a href="login.html" data-i18n-text="login"></a>
         </div>
 
         <div class="content">
