--- a/user-center.html
+++ b/user-center.html
@@ -70,10 +70,10 @@
                     <div class="header-img">
                         <img src="images/header-img.jpg" alt="">
                         <div class="user-level">
-                            <span class="">钻石会员</span>
+                            <span class="" data-i18n-text="lvDiamond">钻石会员</span>
                         </div>
                     </div>
-                    <!-- 20200211 .golden-coin内部新增a标签， -->
+
                     <div class="golden-coin" style="position: relative;">
                         <a id="golden_introduce" href="javascript:void(0)" style="position: absolute;top: -.1rem;right: .4rem;" data-popup=".popup-gold-introduce">
                             <i class="iconfont icon-bangzhu" style="font-size: 1.2rem;background-color: #fff;color: #dd4651;border-radius: 50%"></i>
@@ -137,7 +137,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="item-content item-link">
+                   <!-- <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="#">
                                 <div class="item-media"><i class="center-list-icon-redpacket"></i><span data-i18n-text="RedEnvelopes">红包</span></div>
@@ -150,7 +150,7 @@
                                 <div class="item-media"><i class="center-list-icon-transfer"></i><span data-i18n-text="GameTransfer">游戏转账</span></div>
                             </a>
                         </div>
-                    </li>
+                    </li>-->
                     <li class="item-content item-link">
                         <div class="item-inner">
                             <a href="user-msg.html">
