--- a/bind_bank_addnew.html
+++ b/bind_bank_addnew.html
@@ -3,54 +3,59 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="stylesheet" href="css/sm.min.css">
+    <link rel="stylesheet" href="css/sm-extend.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 
 <body>
 <div class="page-group">
     <div class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="bind_bank.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
-
-            <h1 class="title">新增收款方式</h1>
+            <a class="button button-link button-nav pull-left back" href="bind_bank.html" data-transition='slide-out'>
+                <span class="iconfont icon-fanhui c-white"></span>
+            </a>
+            <h1 class="title" data-i18n-text="addNewCard"></h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
         <div class="content">
             <div class="content-block" id="userinfo_tab">
                 <p class="buttons-row">
-                    <a href="bind_zhifubao_addnew.html" class="button">绑定收款支付宝</a>
-                    <a href="bind_bank_addnew.html" class="button  active">绑定收款银行卡</a>
+                    <!--<a href="bind_bank_addnew.html" class="button  active">绑定收款银行卡</a>-->
                 </p>
             </div>
             <!-- 列表 -->
             <div class="list-block">
                 <!-- 持卡人姓名 -->
-                <div class="item-title row-tit">持卡人姓名 <span class="c-red">*</span></div>
-                <div class="item-content" style="background-color: #fff;">
+                <div class="item-title row-tit"><span data-i18n-text="NameOfCardholder"></span> <span class="c-red">*</span></div>
+                <div class="item-content" >
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="text" placeholder="**试" disabled>
+                            <input type="text"  disabled value="acoousjj220">
+                        </div>
+                    </div>
+                </div>
+                <!-- 银行卡号 -->
+                <div class="item-title row-tit"><span data-i18n-text="BankcardNo"></span> <span class="c-red">*</span></div>
+                <div class="item-content ">
+                    <div class="item-inner">
+                        <div class="item-input">
+                            <input type="number" placeholder="" >
                         </div>
                     </div>
                 </div>
                 <!-- 选择银行 -->
-                <div class="item-title row-tit">选择银行 <span class="c-red">*</span></div>
-                <div class="item-content bc-white">
+                <div class="item-title row-tit"> <span data-i18n-text="bankName"></span> <span class="c-red">*</span></div>
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
                             <select name="bank" id="usertag-form-cashoutbank_bank" class="user-tag-form-select">
@@ -75,8 +80,8 @@
                     </div>
                 </div>
                 <!-- 选择银行 -->
-                <div class="item-title row-tit">卡性质 <span class="c-red">*</span></div>
-                <div class="item-content bc-white">
+                <div class="item-title row-tit"><span data-i18n-text="typeOfCard"></span> <span class="c-red">*</span></div>
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
                             <div id="wwctrl_usertag-form-cashoutbank_accountType" class="wwctrl">
@@ -89,10 +94,10 @@
                         </div>
                     </div>
                 </div>
-                <span class="input-tip">必须使用以真实姓名为开户名的银行卡进行认证</span>
+                <!--<span class="input-tip">必须使用以真实姓名为开户名的银行卡进行认证</span>-->
                 <!-- 开户银行所在地 -->
-                <div class="item-title row-tit">开户银行所在地 <span class="c-red">*</span></div>
-                <div class="item-content bc-white">
+                <div class="item-title row-tit"><span data-i18n-text="locationOfBank"></span> <span class="c-red">*</span></div>
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
                             <select name=""  class="user-tag-form-select">
@@ -101,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item-content bc-white">
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
                             <select name=""  class="user-tag-form-select">
@@ -110,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item-content bc-white">
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
                             <select name=""  class="user-tag-form-select">
@@ -119,20 +124,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- 银行卡号 -->
-                <div class="item-title row-tit">银行卡号 <span class="c-red">*</span></div>
-                <div class="item-content bc-white">
-                    <div class="item-inner">
-                        <div class="item-input">
-                            <input type="number" placeholder="请输入正确的银行卡号" >
-                        </div>
-                    </div>
-                </div>
+
 
             </div>
 
             <div class="content-block">
-                <p><a href="#" class="button button-big button-round button-fill button-warning">提交 </a></p>
+                <p><a href="#" class="button button-big button-round button-fill button-warning" data-i18n-text="btnSubmit"></a></p>
             </div>
 
         </div><!-- /. content -->
@@ -140,11 +137,18 @@
 
 </div>
 
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
+
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 </body>
 </html>
