--- a/msg_subscribe.html
+++ b/msg_subscribe.html
@@ -3,44 +3,44 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="stylesheet" href="css/sm.min.css">
+    <link rel="stylesheet" href="css/sm-extend.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 
 <body>
+
 <div class="page-group">
     <div class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
-
-            <h1 class="title">用户资料</h1>
+            <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>
+                <span class="iconfont icon-fanhui c-white"></span>
+            </a>
+            <h1 class="title" data-i18n-text="UserInformation"></h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
         <div class="content">
-            <div class="content-block" id="userinfo_tab">
-                <p class="buttons-row"><a href="user_info.html" class="button">基本资料</a><a href="bind_bank.html" class="button">收款方式管理</a><a href="msg_subscribe.html" class="button active">短信订阅</a></p>
-            </div>
+            <p class="buttons-row">
+                <a href="user_info.html" class="button " data-i18n-text="basicData"></a>
+                <a href="bind_bank.html" class="button" data-i18n-text="bankCard"></a>
+                <a href="msg_subscribe.html" class="button active" data-i18n-text="SMSsubscription"></a>
+            </p>
             <!-- 列表 -->
             <div class="list-block">
                 <ul>
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label" style="width: 75%">存款</div>
+                                <div class="item-title label" style="width: 75%" data-i18n-text="SMSDeposit"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox" checked>
@@ -53,7 +53,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">提款</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSDrawing"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox" checked>
@@ -66,7 +66,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">取消提款</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSCancellationOfWithdrawal"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -79,7 +79,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">优惠</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSpreferential"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -92,7 +92,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">修改登录密码</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSChangeLoginPassword"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -105,7 +105,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">修改提款密码</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSChangeWithdrawalPassword"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -118,7 +118,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">添加收款银行资料</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSaddReceivingBank"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -131,7 +131,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">修改账户姓名</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSModifyName"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -144,7 +144,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">修改联系电话</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSModifyContactPhone"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -157,7 +157,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">域名变更</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSDomainChange"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -170,7 +170,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">网站更改收款账号</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSChangeCollectionAccount"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -183,7 +183,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">网站问候</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSWebsiteGreetings"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -196,7 +196,7 @@
                     <li>
                         <div class="item-content">
                             <div class="item-inner">
-                                <div class="item-title label"  style="width: 75%">特殊短信</div>
+                                <div class="item-title label"  style="width: 75%" data-i18n-text="SMSSpecial"></div>
                                 <div class="item-input ta-r">
                                     <label class="label-switch">
                                         <input type="checkbox">
@@ -210,7 +210,7 @@
             </div>
 
             <div class="content-block">
-                <p><a href="#" class="button button-big button-round button-fill button-warning">提交 </a></p>
+                <p><a href="#" class="button button-big button-round button-fill button-warning" data-i18n-text="btnSubmit"></a></p>
             </div>
 
         </div><!-- /. content -->
@@ -218,11 +218,18 @@
 
 </div>
 
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
+
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 </body>
 </html>
