--- a/records.html
+++ b/records.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="stylesheet" href="css/sm.min.css">
+    <link rel="stylesheet" href="css/sm-extend.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 
 <body>
@@ -26,7 +23,7 @@
             <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>
                 <span class="iconfont icon-fanhui c-white"> </span></a>
 
-            <h1 class="title">记录</h1>
+            <h1 class="title" data-i18n-text="records">记录</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
@@ -35,27 +32,26 @@
                 <form action="">
                     <div class="border-input">
                         <select>
-                            <option>优惠记录</option>
-                            <option>查询记录</option>
-                            <option>xxx记录</option>
-                            <option>xxxxxxx记录</option>
+                            <option data-i18n-text="PreferentialRecord"></option>
+                            <option data-i18n-text="RechargeRecord"></option>
+                            <option data-i18n-text="WithdrawalRecord"></option>
                         </select>
                     </div>
                     <div class="border-input row">
-                        <div class="col-50"><input type="text" id='startTime' placeholder="起始时间"/></div>
-                        <div class="col-50"><input type="text" id='endTime' placeholder="终止时间"/></div>
+                        <div class="col-50"><input type="text" id='startTime' placeholder="Start time"/></div>
+                        <div class="col-50"><input type="text" id='endTime' placeholder="End time"/></div>
                     </div>
-                    <p><button class="button button-fill" style="display: block;width: 100%;height: 1.6rem;line-height: 1.6rem;">提交 </button></p>
+                    <p><button class="button button-fill" style="display: block;width: 100%;height: 1.6rem;line-height: 1.6rem;" data-i18n-text="btnSubmit">提交 </button></p>
                 </form>
             </div>
 
             <div class="content-padded">
                 <table class="table ">
                     <tr>
-                        <th>时间</th>
-                        <th>下注金额</th>
-                        <th>派彩</th>
-                        <th>有效投注</th>
+                        <th>Time</th>
+                        <th>Bet amount</th>
+                        <th>Payout</th>
+                        <th>Effective betting</th>
                     </tr>
                     <tr>
                         <td>2017-10-25 14:25:01</td>
@@ -151,25 +147,35 @@
 
 </div>
 
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+
+
+<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
+
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
+
 <script>
 
     //起始日期
     let now1 = new Date;
     now1.setTime(now1.getTime() - 24 * 60 * 60 * 1000 * 4);//最后一个数字是默认起始天数
     let startDay = `${now1.getFullYear()}-${now1.getMonth() + 1}-${now1.getDate()}`;
-    $("#startTime").calendar({
+    Zepto("#startTime").calendar({
         value: [startDay]
     });
     //终止日期（今天）
     let now = new Date;
     let today = `${now.getFullYear()}-${now.getMonth() + 1}-${now.getDate()}`;
-    $("#endTime").calendar({
+    Zepto("#endTime").calendar({
         value: [today]
     });
 
